each report chart is a separate view now

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -38,6 +38,18 @@
 {% include "webapp/reports/reports.html" %}
 </script>
 
+<script type="text/ng-template" id="balance.html">
+{% include "webapp/reports/balance.html" %}
+</script>
+
+<script type="text/ng-template" id="top-categories.html">
+{% include "webapp/reports/top-categories.html" %}
+</script>
+
+<script type="text/ng-template" id="category-comparison.html">
+{% include "webapp/reports/category-comparison.html" %}
+</script>
+
 {% endblock body %}
 
 
