--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -12,53 +12,13 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12 well">
-            <h4 class="area-header">{% trans "Balance" %}</h4>
-
-            <div value='balanceData' type="area" height="400" chart class=""></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-4 well">
-            <h4 class="area-header">{% trans "Top 10 Categories" %}</h4>
-
-            <div value='top10Data' type="area" height="300" chart></div>
-        </div>
-
-        <div class="col-md-8 well">
-            <h4 class="area-header">{% trans "Category Comparison" %}</h4>
-
-            <div class="row">
-                <div class="col-md-6 category1 input-icon">
-                    <label for="category1" class="form-label">{% trans "Category 1" %}</label>
-                    <i class="icon-tag input-icon-prepend"></i>
-                    <select
-                        id="category1"
-
-                        ng-model="category1"
-                        category-field
-
-                        ng-options="c as c.name group by c.group for c in categories"
-                        >
-                    </select>
-                </div>
-                <div class="col-md-6 category2 input-icon">
-                    <label for="category2" class="form-label">{% trans "Category 2" %}</label>
-                    <i class="icon-tag input-icon-prepend"></i>
-                    <select
-                        id="category2"
-
-                        ng-model="category2"
-                        category-field
-
-                        ng-options="c as c.name group by c.group for c in categories"
-                        >
-                    </select>
-                </div>
-            </div>
-
-            <div value='categoryComparisonData' type="area" height="300" chart></div>
+        <ul class="col-md-2 nav nav-pills nav-stacked">
+            <li ng-class="{active: $state.includes('reports.balance')}"><a href="#/reports/balance">{% trans "Balance" %}</a></li>
+            <li ng-class="{active: $state.includes('reports.top-categories')}"><a href="#/reports/top-categories">{% trans "Top categories" %}</a></li>
+            <li ng-class="{active: $state.includes('reports.category-comparison')}"><a href="#/reports/category-comparison">{% trans "Category comparison" %}</a></li>
+        </ul>
+        <div class="col-md-10" ui-view>
         </div>
     </div>
 </div>
+
