--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -8,7 +8,7 @@
         <button class="btn btn-link actual-month" id="date-start" ex-month-selector="options.dateStart"></button>
         /
         <button class="btn btn-link actual-month" id="date-end" ex-month-selector="options.dateEnd"></button>
-        <button class="btn btn-small btn-primary" ng-click="updateAll()">{% trans "Update" %}</button>
+        <button class="btn btn-small btn-primary" ng-click="updateCharts()">{% trans "Update" %}</button>
     </div>
 
     <div class="row">
