--- a/templates/webapp/reports/top-categories.html
+++ b/templates/webapp/reports/top-categories.html
@@ -2,4 +2,4 @@
 
 <h4 class="area-header">{% trans "Top 10 Categories" %}</h4>
 
-<div value='top10Data' type="area" height="300" chart></div>
+<div value='topCategoriesData' type="area" height="300" chart></div>
