background on report menu

--- a/static/less/charts.less
+++ b/static/less/charts.less
@@ -1,18 +1,7 @@
 /*
- * Trying to set the tooltip outside the chart
-.highcharts-container {
-    overflow: visible !important;
-        margin-left: 150px;
-        left: -150px;
-        position: relative;
-
-    > svg {
-        margin-left: 150px;
-        left: -150px;
-        position: relative;
-    }
-}
-*/
+ * charts.less
+* Global styles for the charts.
+ */
 
 .highcharts-tooltip {
     p {
