--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -9,6 +9,7 @@
 @import "category-list.less";
 @import "settings.less";
 @import "balance.less";
+@import "reports.less";
 @import "charts.less";
 @import "forms.less";
 
