--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -492,11 +492,11 @@
 
 // List group
 // -------------------------
-@list-group-bg:               #fff;
+@list-group-bg:               @panel-bg;
 @list-group-border:           #ddd;
 @list-group-border-radius:    @border-radius-base;
 
-@list-group-hover-bg:         #f5f5f5;
+@list-group-hover-bg:         @gray-lighter;
 @list-group-active-color:     #fff;
 @list-group-active-bg:        @component-active-bg;
 @list-group-active-border:    @list-group-active-bg;
