applying styles to transactions grouped by date too

--- a/static/less/transaction-list.less
+++ b/static/less/transaction-list.less
@@ -29,15 +29,11 @@ thead tr th {
 
             table {
                 thead {
-                    .date-column-header {
+                    .category-column-header, .date-column-header, .value-column-header, .action-bar-header {
                         width: 1%;
                     }
                     .value-column-header {
                         text-align: right;
-                        width: 1%;
-                    }
-                    .action-bar-header {
-                        width: 1%;
                     }
                 }
                 .transaction-row {
