--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -115,6 +115,7 @@
                             <td class="value-column-header">
                                 {% trans "Value" %}
                             </td>
+                            <td class="action-bar-header"></td>
                         </tr></thead>
 
                         <tbody>
