kinda fixing datepicker dropdown width

--- a/static/less/datepicker-override.less
+++ b/static/less/datepicker-override.less
@@ -26,4 +26,8 @@
     thead th.datepicker-switch {
         font-style: normal !important;
     }
+
+    &.datepicker-dropdown {
+        width: 230px;
+    }
 }
