--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -21,9 +21,9 @@
         <div class="col-md-10">
             <div class="month-selector">
                 {% trans "Period" %}: 
-                <button class="btn btn-link actual-month" id="date-start" ex-month-selector="options.dateStart"></button>
+                <button class="btn btn-link actual-month" id="date-start" month-selector="options.dateStart"></button>
                 /
-                <button class="btn btn-link actual-month" id="date-end" ex-month-selector="options.dateEnd"></button>
+                <button class="btn btn-link actual-month" id="date-end" month-selector="options.dateEnd"></button>
                 <button class="btn btn-small btn-primary" ng-click="updateCharts()">{% trans "Update" %}</button>
             </div>
 
