removing unused files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
       <head>
@@ -41,7 +42,6 @@
           <div class="header">
             <div id="nav" class="container">
               <ul class="nav nav-pills pull-right navigation" >
-                <li data-slide="1"><a href="#">Home</a></li>
                 <li data-slide="2"><a href="#">Sobre</a></li>
                 <li data-slide="3"><a href="#" onclick="showDiv()">Login</a></li>
               </ul>
@@ -234,7 +234,7 @@
         <script src="/static/landing/assets/js/jquery.js"></script>
         <script src="/static/landing/dist/js/bootstrap.js"></script>
         <script src="/static/landing/js/modal.js"></script>
-        <script type="text/javascript" src="static/landing/js/jquery.stellar.min.js"></script>
+        <script type="text/javascript" src="/static/landing/js/jquery.stellar.min.js"></script>
         <script type="text/javascript" src="/static/landing/js/waypoints.min.js"></script>
         <script type="text/javascript" src="/static/landing/js/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="/static/landing/js/scripts.js"></script>
