adding favicon link

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:900' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" />
+        <link rel="icon" href="/static/landing/ico/favicon.ico">
 
         {% if is_debug %}
         <script src="{% static "js/lib/jquery-1.10.2.js" %}"></script>
