--- a/templates/webapp/transactions/month_balance_panel.html
+++ b/templates/webapp/transactions/month_balance_panel.html
@@ -5,7 +5,7 @@
 <div class="panel panel-default" id="balance-panel">
 <div ng-controller="BalancePanelCtrl" class="panel-body">
     <div class="balance-info">
-        <div class="renevues">
+        <div id="total-renevues" class="renevues">
             <span class="description">
                 {% trans "renevues" %}
             </span>
@@ -13,7 +13,7 @@
             </span>
         </div>
 
-        <div class="expenses">
+        <div id="total-expenses" class="expenses">
             <span class="description">
                 {% trans "expenses" %}
             </span>
@@ -21,7 +21,7 @@
             </span>
         </div>
 
-        <div class="total" ng-class="{true: 'positive', false: 'negative'}[(renevues + expenses) >= 0]">
+        <div id="balance-total" class="total" ng-class="{true: 'positive', false: 'negative'}[(renevues + expenses) >= 0]">
             <span class="description">
                 {% trans "total" %}
             </span>
