--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group input-icon">
-        <label for="id_description" class="form-label">{% trans "Description (optional)" %}</label>
+        <label for="id_description" class="form-label">{% trans "Description" %}</label>
         <i class="icon-pencil input-icon-prepend"></i>
         <input
             id="id_description"
