--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -19,20 +19,25 @@
             </div>
             </div>
 
-            <div id="group-options" class="btn-group">
-                <input class="btn btn-default"
-                        type="button"
-                        value="{% trans "Group transactions by date" %}"
-                        ng-click="groupBy = 'date'"
-                        ng-class="{active: groupBy == 'date'}"
-                        >
-                <input class="btn btn-default"
-                        ng-class="{active: groupBy == 'category.name'}"
-                        type="button"
-                        value="{% trans "Group transactions by category" %}"
-                        ng-click="groupBy = 'category.name'"
-                        >
-            </div>
+            <ul class="list-inline">
+            <li>{% trans "Group transactions by:" %}</li>
+            <li>
+                <div id="group-options" class="btn-group">
+                    <input class="btn btn-default"
+                            type="button"
+                            value="{% trans "date" %}"
+                            ng-click="groupBy = 'date'"
+                            ng-class="{active: groupBy == 'date'}"
+                            >
+                    <input class="btn btn-default"
+                            ng-class="{active: groupBy == 'category.name'}"
+                            type="button"
+                            value="{% trans "category" %}"
+                            ng-click="groupBy = 'category.name'"
+                            >
+                </div>
+            </li>
+            </ul>
         </div>
 
         <div class="panel-group" id="transaction-groups" ng-if="groupBy == 'category.name'">
