--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -117,7 +117,7 @@
     <script type="text/javascript">
         $(function () {
             toastr.options.positionClass = "toast-top-full-width";
-            toastr.info(gettext('Welcome to Niqels, {0}!').format('{{ user.name }}'));
+            toastr.info("{% trans "Welcome to Niqels, {0}!"%}".format('{{ user.name }}'));
             toastr.options.positionClass = "toast-bottom-right";
         });
     </script>
