--- a/templates/landing.html
+++ b/templates/landing.html
@@ -66,7 +66,7 @@
                                     </a>
                                   </h4>
                                 </div><!-- .panel-heading -->
-                                <div id="collapseOne" class="panel-collapse collapse">
+                                <div id="collapseOne" class="panel-collapse collapse in">
                                   <div class="panel-body">
                                     Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
                                   </div><!-- .panel-body -->
