using html5 select on mobile

--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -19,6 +19,7 @@
         <select
             id="id_category"
             name="category"
+            class="form-control"
 
             ng-model="formData.category"
             category-field
