fixing mobile check

--- a/templates/webapp/reports/category-comparison.html
+++ b/templates/webapp/reports/category-comparison.html
@@ -8,6 +8,7 @@
         <i class="icon-tag input-icon-prepend"></i>
         <select
             id="category1"
+            class="form-control"
 
             ng-model="category1"
             category-field
@@ -21,6 +22,7 @@
         <i class="icon-tag input-icon-prepend"></i>
         <select
             id="category2"
+            class="form-control"
 
             ng-model="category2"
             category-field
