fixing selects not receving text-ident

--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -10,7 +10,7 @@
     i.input-icon-prepend {
         left: 10px;
 
-        + input {
+        + input, + select {
             text-indent: 20px;
         }
     }
