--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -14,10 +14,34 @@
 
 
 {% block webapp-menu %}
-<ul class="nav navbar-nav">
-    <li ng-class="{active: $state.includes('transactions')}"><a href="#/transactions">{% trans "Transactions" %}</a></li>
-    <li ng-class="{active: $state.includes('reports')}"><a href="#/reports">{% trans "Reports" %}</a></li>
-</ul>
+<div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+        <li ng-class="{active: $state.includes('transactions')}"><a href="#/transactions">{% trans "Transactions" %}</a></li>
+        <li ng-class="{active: $state.includes('reports')}"><a href="#/reports">{% trans "Reports" %}</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li>
+            <a href="https://www.facebook.com/niqels" track="click,Social,click,facebook-link" id="facebook-link" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
+        </li>
+        {% comment %}
+        <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">{% trans "Contact us" %} <i class="icon-comments-alt icon-large"></i></a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="https://www.facebook.com/niqels" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/niqelsapp" class="navbar-link" target="_blank"><i class="icon-twitter-sign icon-large"></i> {% trans "Follow us on Twitter" %}</a>
+                </li>
+                <li>
+                    <a href="mailto:contato@niqels.com.br" class="navbar-link" target="_blank"><i class="icon-envelope-alt icon-large"></i> {% trans "Email us" %}</a>
+                </li>
+            </ul>
+        </li>
+        {% endcomment %}
+        {% include "user-menu.html" %}
+    </ul>
+</div>
 {% endblock webapp-menu %}
 
 
