tracking some actions

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -21,7 +21,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="https://www.facebook.com/niqels" track="click,Social,click,facebook-link" id="facebook-link" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
+            <a href="https://www.facebook.com/niqels" track="click,Social,facebook-link" id="facebook-link" class="navbar-link" target="_blank"><i class="icon-facebook-sign icon-large"></i> {% trans "Like us on Facebook" %}</a>
         </li>
         {% comment %}
         <li class="dropdown">
