--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -6,13 +6,13 @@
     <div class="row">
 
         <div class="col-md-2 list-group" id="reports-menu">
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.balance')}" href="#/reports/balance">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.balance')}" href="#/reports/balance" track="click,Reports,view,balance">
                 {% trans "Balance" %}
             </a>
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.top-categories')}" href="#/reports/top-categories">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.top-categories')}" href="#/reports/top-categories" track="click,Reports,view,top-categories">
                 {% trans "Top categories" %}
             </a>
-            <a class="list-group-item" ng-class="{active: $state.includes('reports.category-comparison')}" href="#/reports/category-comparison">
+            <a class="list-group-item" ng-class="{active: $state.includes('reports.category-comparison')}" href="#/reports/category-comparison" track="click,Reports,view,comparison">
                 {% trans "Category comparison" %}
             </a>
         </div>
@@ -24,7 +24,12 @@
                 <button class="btn btn-link actual-month" id="date-start" month-selector="options.dateStart"></button>
                 /
                 <button class="btn btn-link actual-month" id="date-end" month-selector="options.dateEnd"></button>
-                <button class="btn btn-small btn-primary" ng-click="updateCharts()">{% trans "Update" %}</button>
+                <button class="btn btn-small btn-primary"
+                    ng-click="updateCharts()"
+                    track="click,Reports,update-period"
+                    >
+                    {% trans "Update" %}
+                </button>
             </div>
 
             <div ui-view></div>
