--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -69,11 +69,12 @@
             />
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-icon">
         <label for="id_date" class="form-label">{% trans "Date" %}</label>
+        <i class="icon-calendar input-icon-prepend"></i>
         <div
-            datepicker
-            datepicker-model="formData.date"
+            date-field
+            date-field-model="formData.date"
             class="form-control"
             id="id_date"
             name="date"
