--- a/templates/landing.html
+++ b/templates/landing.html
@@ -52,12 +52,16 @@
           </div><!-- .header -->
     
          <div class="jumbotron">
-              <h1>Assessor financeiro pessoal. <span>Fácil e grátis.</span></h1>
-              <p class="lead lead-custom">Assessoria financeira pessoal online automatizada, inteligente e disponível o tempo inteiro, 
-              aonde você for.</p>
+              <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
+              <p class="lead lead-custom">
+                  Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
+              </p>
               <div class="panel-fadein">
                 <div class="bg-panel pull-left">
+                        <p><a href="{% url "register" %}" class="btn btn-lg btn-primary btn-custom">Experimente agora 
+                        <span class="glyphicon glyphicon-chevron-right"></span></a></p>                      
                     <div class="panel-group" id="accordion">
+
                               <div class="panel panel-default">
                                 <div class="panel-heading">
                                   <h4 class="panel-title">
@@ -101,8 +105,6 @@
                                   </div><!-- .panel-body -->
                                 </div><!-- #collapseThree -->
                               </div><!-- .panel.panel-default -->
-                        <p><a href="{% url "register" %}" class="btn btn-lg btn-primary btn-custom">Experimente agora 
-                        <span class="glyphicon glyphicon-chevron-right"></span></a></p>                      
                     </div> <!-- .panel-group-->
                 </div> <!-- .bg-panel -->
                 <div class="fadein">
